<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.github.xiangganluo</groupId>
    <artifactId>dynamic-log</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>

    <name>Dynamic Log</name>
    <description>A dynamic log level management framework for Java applications, supporting runtime log level refresh from configuration centers</description>
    <url>https://github.com/xiangganLuo/dynamic-log</url>

    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>xiangganLuo</id>
            <name>xiangganLuo</name>
            <email>xiangganluo@gmail.com</email>
            <organization>xiangganLuo</organization>
            <roles>
                <role>author</role>
            </roles>
        </developer>
    </developers>

    <issueManagement>
        <system>GitHub Issues</system>
        <url>https://github.com/xiangganLuo/dynamic-log/issues</url>
    </issueManagement>

    <scm>
        <connection>scm:git:https://github.com/xiangganLuo/dynamic-log.git</connection>
        <developerConnection>scm:git:git@github.com:xiangganLuo/dynamic-log.git</developerConnection>
        <url>https://github.com/xiangganLuo/dynamic-log</url>
    </scm>

    <modules>
        <module>dynamic-log-dependencies-bom</module>
        <module>dynamic-log-common</module>
        <module>dynamic-log-core</module>
        <module>dynamic-log-spring</module>
        <module>dynamic-log-apollo</module>
        <module>dynamic-log-nacos</module>
        <module>dynamic-log-log4j2</module>
        <module>dynamic-log-plugin-ttl</module>
        <module>dynamic-log-endpoint</module>
        <module>dynamic-log-plugin-audit</module>
        <module>dynamic-log-test</module>
        <module>dynamic-log-examples</module>
    </modules>

    <properties>
        <!-- dynamic-log版本 -->
        <revision>1.0.0</revision>
        <java.version>1.8</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <!-- maven plugin -->
        <maven-flatten-plugin.version>1.6.0</maven-flatten-plugin.version>
        <maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
        <maven-javadoc-plugin.version>3.4.0</maven-javadoc-plugin.version>
        <maven-source-plugin.version>3.2.1</maven-source-plugin.version>
        <maven-surefire-plugin.version>3.2.5</maven-surefire-plugin.version>
        <maven-deploy-plugin.version>3.1.4</maven-deploy-plugin.version>
        <maven-gpg-plugin.version>3.2.7</maven-gpg-plugin.version>
        <central-publishing-plugin.version>0.11.0</central-publishing-plugin.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.github.xiangganluo</groupId>
                <artifactId>dynamic-log-dependencies-bom</artifactId>
                <version>${project.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <repositories>
        <repository>
            <id>aliyun-spring</id>
            <name>Aliyun Spring</name>
            <url>https://maven.aliyun.com/repository/spring</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </repositories>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <encoding>${project.build.sourceEncoding}</encoding>
                    <compilerArgs>
                        <arg>-Xlint:unchecked</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>${maven-javadoc-plugin.version}</version>
                <configuration>
                    <!-- 统一生成聚合文档，解决 mvn package 时控制台发出 javadoc 警告的问题 -->
                    <aggregate>true</aggregate>
                    <!-- 忽略部分 error 和 warning -->
                    <failOnError>false</failOnError>
                    <failOnWarnings>false</failOnWarnings>
                    <additionalOptions>-Xdoclint:none</additionalOptions>
                    <detectLinks>false</detectLinks>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>aggregate</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                        <configuration>
                            <additionalparam>-Xdoclint:none</additionalparam>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>${maven-flatten-plugin.version}</version>
                <configuration>
                    <updatePomFile>true</updatePomFile>
                    <flattenMode>oss</flattenMode>
                </configuration>
                <executions>
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!-- Source -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>${maven-source-plugin.version}</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>${maven-deploy-plugin.version}</version>
                <configuration>
                    <skip>true</skip>
                </configuration>
                <executions>
                    <!-- 解绑标准 deploy 目标（phase=none）：发布统一走 central-publishing，
                         彻底避免被环境 profile 的 altReleaseDeploymentRepository 重定向到其它仓库 -->
                    <execution>
                        <id>default-deploy</id>
                        <phase>none</phase>
                    </execution>
                </executions>
            </plugin>
            <!-- GPG 签名（中央仓库强制要求）：绑定 verify 阶段。本地非发布构建可用 -Dgpg.skip=true 跳过 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-gpg-plugin</artifactId>
                <version>${maven-gpg-plugin.version}</version>
                <executions>
                    <execution>
                        <id>sign-artifacts</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!-- 发布到 Maven 中央仓库（Central Portal）。settings.xml 配置 server id=central 的 Portal token -->
            <plugin>
                <groupId>org.sonatype.central</groupId>
                <artifactId>central-publishing-maven-plugin</artifactId>
                <version>${central-publishing-plugin.version}</version>
                <extensions>true</extensions>
                <configuration>
                    <publishingServerId>central</publishingServerId>
                    <tokenAuth>true</tokenAuth>
                    <!-- 上传后停在 Portal「校验通过」态，由人工在网页点 Publish 最终发布（避免自动不可逆发布） -->
                    <autoPublish>false</autoPublish>
                    <waitUntil>validated</waitUntil>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
